--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,9 @@
 .nav {
 	background-color : #D3D3D3;
 	padding: 10px;
-	
 }
 .list {
 	display: inline;
-}
-.ul {
 	margin-right: 1rem;
+	list-style-type : none;
 }
